# django_salted_api_tokens

./: .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
src/django_salted_api_tokens/: __init__.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py
src/example_django_project/example_django_project/: settings.py
src/tests/: factories.py  test_authentication_api_key_secret.py  test_view_create_api_key_secret.py
