[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_salted_api_tokens"
version = "1.0.0"
authors = [
  { name="Harisankar Krishna Swamy", email="harisankar.krishna@outlook.com" },
]
description = "Django token authentication with hashed, salted tokens"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache2 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/harisankar-krishna-swamy/django_salted_api_tokens"
